[metadata]
name = PyCustomParsers
version = 1.0
author = Ryan Henrichson
author_email = orcephrye@gmail.com
description = Set of utilities for parsing different files types into different data structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orcephrye/PyCustomParsers
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GENERAL PUBLIC LICENSE v3
    Operating System :: Linux

[options]
packages = PyCustomParsers
python_requires = >=3.8
install_requires =
    six >= 1.16.0
    pytz >= 2021.1
